--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "swiper": "^5.4.5",
+    "vant": "^2.8.7",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-concise-slider": "^3.4.4",
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "babel-plugin-import": "^1.13.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
